--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -10,7 +10,7 @@
 @media (prefers-reduced-motion: no-preference) {}
 
 .App-header {
-  background-color: #282c34;
+  background-color: #013368;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
